--- a/Downloads/portfolio-main/index.html
+++ b/Downloads/portfolio-main/index.html
@@ -5,9 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Professional Portfolio Development</title>
-    <meta property="og:image" content="https://bolt.new/static/og_default.png" />
+    <meta property="og:image" content="https://vikram-ramanathan-portfolio.space/vikram_ramanathan.jpg" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="https://bolt.new/static/og_default.png" />
+    <meta name="twitter:image" content="https://vikram-ramanathan-portfolio.space/vikram_ramanathan.jpg" />
   </head>
   <body>
     <div id="root"></div>
